<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">仿内涵段子</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="main_tab_item_text">段子</string>
    <string name="main_tab_item_photo">图片</string>
    <string name="main_tab_item_check">审核</string>
    <string name="main_tab_item_huodong">活动</string>
    <string name="main_tab_item_mine">我的</string>

</resources>
