<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/main_fragment_contain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

     
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

           <RadioGroup
            android:gravity="center"
            android:layout_weight="1"    
            android:layout_width="match_parent"  
            android:orientation="horizontal"
            android:id="@+id/radioGroup1"
            android:background="#303000"         
            android:layout_height="match_parent" >

            <RadioButton        
                android:id="@+id/main_tab_text"
               	style="@style/my_tab_item"
               	android:checked="true"
               	android:drawableTop="@drawable/main_tab_item_essay_bg"
                android:text="@string/main_tab_item_text" />

            <RadioButton               
                android:id="@+id/main_tab_ptoto"
              	style="@style/my_tab_item"       
              	android:drawableTop="@drawable/main_tab_item_photo_bg"     	
                android:text="@string/main_tab_item_photo" />

            <RadioButton      
                android:drawableTop="@drawable/main_tab_item_check_bg"           
                android:id="@+id/main_tab_check"
                style="@style/my_tab_item"
                android:text="@string/main_tab_item_check" />
            <RadioButton             
                android:drawableTop="@drawable/main_tab_item_activity_bg"    
                android:id="@+id/main_tab_activity"
              	style="@style/my_tab_item"
                android:text="@string/main_tab_item_huodong" />
            <RadioButton        
                android:drawableTop="@drawable/main_tab_item_bg"         
                android:id="@+id/main_tab_my"
              	style="@style/my_tab_item"
                android:text="@string/main_tab_item_mine" />
        </RadioGroup>
        
    </LinearLayout>

</LinearLayout>